# tunix-gemma4-tpu

./: .gitignore  GEMINI.md  README.md  baseline_eval.py  download_model.py  eval_comparison.py  eval_comparison_hf.py  eval_perplexity.py  eval_tpu.py  eval_tpu_v2.py  export_model.py  generate_blog_assets.py  main.py  manual_eval.py  manual_eval_no_jit.py  master_plan.md  peek_dataset.py  prepare_data.py  pyproject.toml  quick_test.py  tpu_setup_and_train.sh  train_dry_run.py  train_tpu.py
blog/: fine-tuning-gemma4-insurance.md
results/: results_base_final.json  results_base_v2.json  results_finetuned.json
